--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,17 @@ table, th, td {
 td {
     height: 8.85em;
     width: 6.4em;
+    vertical-align: top;
+}
+
+td form {
+    height: 100%;
+    width: 100%;
+}
+
+td input[type="submit"] {
+    height: 100%;
+    width: 100%;
 }
 
 /* Lay cards out in a stacked hand showing indices */
@@ -51,6 +62,9 @@ td {
  position: relative;
  height: 9.6em;
  padding-right: 0;
+ border: 2px solid #695d39;
+ border-radius: .5em;                       /* omitted -moz- and -webkit- hacks */
+ box-shadow: -.25em .25em .5em -.25em #000; /* omitted -moz- and -webkit- hacks */
 }
 
 /* card styling */
@@ -58,9 +72,7 @@ td {
   height: 8.85em;
   width: 6.4em;
   background-color: #fff;
-  border: 2px solid #695d39;
-  border-radius: .5em;                       /* omitted -moz- and -webkit- hacks */
-  box-shadow: -.25em .25em .5em -.25em #000; /* omitted -moz- and -webkit- hacks */
+
   font-family: 'Times', serif;
   line-height: 1em;
   padding-top: .25em;
