--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,6 +67,12 @@ nav a:selected {
 
 h1 {
     text-align: center;
+    color: #fff;
+    margin-bottom: 4rem;
+}
+
+p {
+    color: #eef;
 }
 
 footer {
@@ -83,84 +89,101 @@ footer {
 table {
     margin: 0 auto;
     border-collapse: collapse;
-    border: 0;
-    font-size: 0.5rem;
+    border: 1px solid black;
     background-color: #fff;
     margin-bottom: 2rem;
+    text-align: left;
 }
 
-tr {
+tr, th, td {
+    padding: 0.5rem;
+    border: 1px solid black
+}
+
+th {
+    background: linear-gradient(180deg, rgba(182,180,20,1) 0%, rgba(224,253,31,1) 84%);
+}
+
+#grid {
+
     border: 0;
+    font-size: 0.5rem;
 }
 
-tr:first-child td {
+#grid tr {
+    border: 0;
+    padding: 0;
+}
+
+#grid tr:first-child td {
     border-top: 0;
 }
 
-td {
+#grid td {
     border: 1px solid rgb(25,141,47);
+    padding: 0;
 }
 
-td {
+#grid td {
     height: 9em;
     width: 6.6em;
     vertical-align: top;
 }
 
 /* center scoring cell text */
-td:nth-child(6),
-td:nth-child(13),
-td:nth-child(20),
-td:nth-child(27),
-td:nth-child(34),
-tr:nth-child(6)
+#grid td:nth-child(6),
+#grid td:nth-child(13),
+#grid td:nth-child(20),
+#grid td:nth-child(27),
+#grid td:nth-child(34),
+#grid tr:nth-child(6)
  {
     text-align: center;
     vertical-align: middle;
     margin: 0 auto;
 }
 
-td:last-child {
+#grid td:last-child {
     width: 7em;
 }
 
-td form {
+#grid td form {
     height: 100%;
     width: 100%;
 }
 
-td form input[type="submit"] {
+#grid td form input[type="submit"] {
     height: 100%;
     width: 100%;
     cursor: pointer;
     border: 0;
 }
 
-tr td:nth-child(6),
-tr td:nth-child(7) {
+#grid tr td:nth-child(6),
+#grid tr td:nth-child(7) {
     background-color: rgb(25,141,47);
     border-top: 0;
     border-right: 0;
     border-bottom: 0;
 }
 
-tr td:nth-child(6) {
+#grid tr td:nth-child(6) {
     color: #fff;
 }
 
-tr td:nth-child(7) {
+#grid tr td:nth-child(7) {
     border-top: 0;
     border-left: 0;
     border-bottom: 0;
     border-right: 0;
 }
 
-tr:nth-child(6) {
+#grid tr:nth-child(6) {
     background-color: rgb(25,141,47);
     color: #fff;
 }
 
-tr:nth-child(6) td {
+#grid tr:nth-child(6) td {
     border-bottom: 0;
     border-right: 0;
 
@@ -179,7 +202,6 @@ div.enterName input[type="text"] {
     padding: 5px;
     text-align: center;
     font-weight: bold;
-    margin-top: 6rem;
 }
 
 div.enterName input[type="text"]:focus {
